--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.2.7
 certifi==2020.4.5.1
 chardet==3.0.4
 Django==3.0.6
+django-appconf==1.0.4
+django-compressor==2.4
 django-environ==0.4.5
 django-sass-processor==0.8
 django-staff-sso-client==2.1.0
@@ -10,8 +12,11 @@ idna==2.9
 libsass==0.20.0
 oauthlib==3.1.0
 pytz==2020.1
+rcssmin==1.0.6
 requests==2.23.0
 requests-oauthlib==1.3.0
+rjsmin==1.1.0
 six==1.14.0
 sqlparse==0.3.1
 urllib3==1.25.9
+waitress==1.4.3
