--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "govuk-frontend": "^3.6.0",
     "sass": "^1.26.5"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0"
   }
 }
