--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-webpack-loader==0.7.0
 idna==2.9
 libsass==0.20.0
 oauthlib==3.1.0
+pytest==5.4.2
 pytz==2020.1
 requests==2.23.0
 requests-oauthlib==1.3.0
